welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:11: error: too many arguments for method getCouleurSol: ()java.awt.Color
  getCouleurSol(c)
               ^